[project]
name = "agents"
version = "0.1.0"
description = "A Python project initialized by Copilot"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.0.27",
    "langchain-openai>=0.3.35",
    "requests>=2.32.4",
    "requires>=0.10.5",
    "tavily>=1.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
