[project]
name = "agents"
version = "0.1.0"
description = "A Python project initialized by Copilot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent>=0.1.3",
    "dotenv>=0.9.9",
    "langchain>=1.0.8",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "requests>=2.32.5",
    "requires>=0.12.1",
    "tavily>=1.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
