[project]
name = "agents"
version = "0.1.0"
description = "A Python project initialized by Copilot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent>=0.1.3",
    "dotenv>=0.9.9",
    "langchain>=1.1.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.0",
    "langgraph-cli[inmem]>=0.4.7",
    "pymysql>=1.1.2",
    "pytest>=9.0.1",
    "requests>=2.32.5",
    "requires>=0.12.1",
    "sqlalchemy>=2.0.44",
    "tavily>=1.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
